--- a/front-templates/widgets.html
+++ b/front-templates/widgets.html
@@ -25,7 +25,7 @@
         </label>
     </div>
 
-    <div class="location">
+    <div class="feature-tour-controls">
         <header>
             <small>3345 / 2</small>
             <div class="map-actions">
