--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
   <!-- Top Bar -->
   <div class="top-bar">
     <div class="brand">
-      <i class="fas fa-map-marked-alt"></i>
-      <!-- <span id="titleApp">GIS Explorer</span> -->
+      <img class="logo" src="images/hail_lg_dark_1.png" alt="">
       <span id="titleApp">حدائق حائل</span>
     </div>
 
