setup new loading + quick fixes

--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
   <!-- Loading Screen -->
   <div id="loadingScreen" class="loading-screen">
     <div class="loading-content">
-      <div class="loading-animation">
-        <div class="loading-ring"></div>
-        <i class="fas fa-globe-americas loading-icon"></i>
-      </div>
-      <p class="loading-text">Initializing Map...</p>
+      <img class="initial-logo" src="images/logo-2030.svg" alt="">
+      <!-- <img class="loaded-gif" src="images/map-loading.gif" alt="">
+      <div class="loading-text">جاري مسح الخريطة...</div> -->
     </div>
   </div>
 
