--- a/index.html
+++ b/index.html
@@ -105,15 +105,18 @@
     <div class="toolbar-group">
       <button class="toolbar-btn" id="uploadBtn" title="Upload Files">
         <i class="fas fa-cloud-upload-alt"></i>
-        <span class="toolbar-label">Upload</span>
+<!--         <span class="toolbar-label">Upload</span> -->
+        <span class="toolbar-label">رفع ملف</span>
       </button>
       <button class="toolbar-btn" id="layersBtn" title="Layers">
         <i class="fas fa-layer-group"></i>
-        <span class="toolbar-label">Layers</span>
+<!--         <span class="toolbar-label">Layers</span> -->
+        <span class="toolbar-label">الطبقات</span>
       </button>
       <button class="toolbar-btn" id="basemapBtn" title="Basemap">
         <i class="fas fa-map"></i>
-        <span class="toolbar-label">Basemap</span>
+<!--         <span class="toolbar-label">Basemap</span> -->
+        <span class="toolbar-label">خريطة الأساس</span>
       </button>
     </div>
 
@@ -126,11 +129,13 @@
       </button> -->
       <button class="toolbar-btn" id="drawBtn" title="Draw">
         <i class="fas fa-pencil-alt"></i>
-        <span class="toolbar-label">Draw</span>
+<!--         <span class="toolbar-label">Draw</span> -->
+        <span class="toolbar-label">الرسم</span>
       </button>
       <button class="toolbar-btn" id="locateBtn" title="My Location">
         <i class="fas fa-crosshairs"></i>
-        <span class="toolbar-label">Locate</span>
+<!--         <span class="toolbar-label">Locate</span> -->
+        <span class="toolbar-label">موقعي</span>
       </button>
     </div>
 
@@ -139,21 +144,25 @@
     <div class="toolbar-group">
       <button class="toolbar-btn" id="analysisBtn" title="Analysis">
         <i class="fas fa-chart-area"></i>
-        <span class="toolbar-label">Analysis</span>
+<!--         <span class="toolbar-label">Analysis</span> -->
+        <span class="toolbar-label">تحليل</span>
       </button>
       <button class="toolbar-btn" id="visualizeBtn" title="Visualization">
         <i class="fas fa-fire"></i>
-        <span class="toolbar-label">Visualize</span>
+<!--         <span class="toolbar-label">Visualize</span> -->
+        <span class="toolbar-label">عرض</span>
       </button>
 
       <button class="toolbar-btn" id="classificationBtn" title="Classification">
         <i class="fas fa-palette"></i>
-        <span class="toolbar-label">Classify</span>
+<!--         <span class="toolbar-label">Classify</span> -->
+        <span class="toolbar-label">تصنيف</span>
       </button>
 
       <button class="toolbar-btn" id="tableBtn" onclick="toggleAttributeTable()" title="Attribute Table">
         <i class="fas fa-table"></i>
-        <span class="toolbar-label">Table</span>
+<!--         <span class="toolbar-label">Table</span> -->
+        <span class="toolbar-label">جدول البيانات</span>
       </button>
     </div>
 
@@ -162,15 +171,18 @@
     <div class="toolbar-group">
       <button class="toolbar-btn" onclick="toggleWidget('legend')" title="Legend">
         <i class="fas fa-list"></i>
-        <span class="toolbar-label">Legend</span>
+<!--         <span class="toolbar-label">Legend</span> -->
+        <span class="toolbar-label">مفتاح الخريطة</span>
       </button>
       <button class="toolbar-btn" onclick="toggleWidget('bookmarks')" title="Bookmarks">
         <i class="fas fa-bookmark"></i>
-        <span class="toolbar-label">Bookmarks</span>
+<!--         <span class="toolbar-label">Bookmarks</span> -->
+        <span class="toolbar-label">العلامات المرجعية</span>
       </button>
       <button class="toolbar-btn" onclick="toggleWidget('print')" title="Print">
         <i class="fas fa-print"></i>
-        <span class="toolbar-label">Print</span>
+<!--         <span class="toolbar-label">Print</span> -->
+        <span class="toolbar-label">طباعة</span>
       </button>
     </div>
   </div>
@@ -191,15 +203,15 @@
     <div class="mobile-menu-grid">
       <button class="mobile-menu-item" data-action="upload">
         <i class="fas fa-cloud-upload-alt"></i>
-        <span>Upload</span>
+        <span>رفع ملف</span>
       </button>
       <button class="mobile-menu-item" data-action="layers">
         <i class="fas fa-layer-group"></i>
-        <span>Layers</span>
+        <span>الطبقات</span>
       </button>
       <button class="mobile-menu-item" data-action="basemap">
         <i class="fas fa-map"></i>
-        <span>Basemap</span>
+        <span>خريطة الأساس</span>
       </button>
       <!-- <button class="mobile-menu-item" data-action="measure">
         <i class="fas fa-ruler-combined"></i>
@@ -207,42 +219,42 @@
       </button> -->
       <button class="mobile-menu-item" data-action="draw">
         <i class="fas fa-pencil-alt"></i>
-        <span>Draw</span>
+        <span>الرسم</span>
       </button>
       <button class="mobile-menu-item" data-action="locate">
         <i class="fas fa-crosshairs"></i>
-        <span>Locate</span>
+        <span>موقعي</span>
       </button>
       <button class="mobile-menu-item" data-action="analysis">
         <i class="fas fa-chart-area"></i>
-        <span>Analysis</span>
+        <span>تحليل</span>
       </button>
       <button class="mobile-menu-item" data-action="visualize">
         <i class="fas fa-fire"></i>
-        <span>Visualize</span>
+        <span>عرض</span>
       </button>
 
       <button class="mobile-menu-item" data-action="classification">
         <i class="fas fa-palette"></i>
-        <span>Classify</span>
+        <span>تصنيف</span>
       </button>
 
 
       <button class="mobile-menu-item" onclick="toggleAttributeTable()">
         <i class="fas fa-table"></i>
-        <span>Table</span>
+        <span>جدول البيانات</span>
       </button>
       <button class="mobile-menu-item" onclick="toggleWidget('legend')">
         <i class="fas fa-list"></i>
-        <span>Legend</span>
+        <span>مفتاح الخريطة</span>
       </button>
       <button class="mobile-menu-item" onclick="toggleWidget('bookmarks')">
         <i class="fas fa-bookmark"></i>
-        <span>Bookmarks</span>
+        <span>العلامات المرجعية</span>
       </button>
       <button class="mobile-menu-item" onclick="toggleWidget('print')">
         <i class="fas fa-print"></i>
-        <span>Print</span>
+        <span>طباعة</span>
       </button>
     </div>
   </div>
@@ -983,5 +995,6 @@
   <script type="module" src="script.js"></script>
   <!-- <script type="module" src="foreignLogic.js"></script> -->
 </body>
+
 
 </html>
