--- a/index.html
+++ b/index.html
@@ -57,8 +57,17 @@
 <div class="map-tabs-container">
   <div class="tab-wrapper">
 
+        <button class="tab-button" data-tab="smartEye">
+      <span class="tab-text">منصة العين الذكية (نظام ربط ومتابعة كاميرات المطاعم والكافيهات باستخدام الذكاء الاصطناعي)</span>
+      <div class="tab-indicator disabled">
+        <svg class="checkmark" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <path d="M20 6L9 17l-5-5"/>
+        </svg>
+      </div>
+    </button>
+
         <button class="tab-button" data-tab="assets">
-      <span class="tab-text">الأصول</span>
+      <span class="tab-text">منصة إدارة الصيانة والتشغيل وحصر الأصول</span>
       <div class="tab-indicator disabled">
         <svg class="checkmark" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path d="M20 6L9 17l-5-5"/>
@@ -67,7 +76,7 @@
     </button>
 
         <button class="tab-button" data-tab="projects">
-      <span class="tab-text">المشروعات</span>
+      <span class="tab-text">منصة قرار لإدارة المشاريع</span>
       <div class="tab-indicator disabled">
         <svg class="checkmark" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path d="M20 6L9 17l-5-5"/>
@@ -76,9 +85,9 @@
     </button>
     
 
-    <button class="tab-button active" data-tab="gardens">
-      <span class="tab-text">الحدائق</span>
-      <div class="tab-indicator">
+    <button class="tab-button" data-tab="gardens">
+      <span class="tab-text">منصة الحدائق الذكية</span>
+      <div class="tab-indicator disabled">
         <svg class="checkmark" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path d="M20 6L9 17l-5-5"/>
         </svg>
